--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DR Again</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>DR Again </title>
 </head>
 <body>
-    <canvas id="view"></canvas>
-    <div id="alerts"></div>
-
-    <!-- The compiled script containing everything. -->
-    <script src="bundle.js"></script>
+    <a href="game.html"> Game </a>
+    <br>
+    <a href="editor.html"> Editor </a>
 
 </body>
 </html>
