Set up React for editor and simple editor component

--- a/public/editor.html
+++ b/public/editor.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DR Again: Editor</title>
-</head>
-<body>
-    <h1> Editor </h1>
-    <a href="/"> Back to main screen</a>
-    <div id="alerts"></div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <!-- TODO: Is this right?-->
+        <link rel="stylesheet" href="styles.css">
+        <title>DR Again: Editor</title>
+    </head>
+    <body>
+        <h1> Editor </h1>
+        <a href="/"> Back to main screen</a>
+        <div id="alerts"></div>
 
-    <!-- The compiled script containing everything. -->
-    <script src="bundle.js"></script>
-    <script> Main.EDITOR_MAIN(); </script>
+        <div id="editor_container"></div>
 
-</body>
+        <!-- The compiled script containing everything. -->
+        <script src="bundle.js"></script>
+        <script> Main.EDITOR_MAIN(); </script>
+    </body>
 </html>
